[package]
name = "ambient_spider"
version = "0.1.0"
authors = ["Stefan Breetveld <spiderbiggen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#librespot = "0.1.3"
#tokio-core = "0.1.2"
druid = { version = "0.7.0", features = ["im", "image"] }
fs_extra = "1.2.0"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
bytes ="1.0.1"